# test

./: .gitignore  README.md  pyproject.toml
src/mylib/: __init__.py
tests/: __init__.py  test_example.py
